# FoxyInjector

./: .gitignore  .gitmodules  CMakeLists.txt
foxy-launcher/: launcher.cpp  launcher.h
foxy-module/: console.cpp  console.h  hekk.cpp  hekk.h  xm.h
foxy-shared/: foxy.h
foxy-shared/utils/: string_utils.h
